--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ers-prom",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "prometheus",
   "main": "index.js",
   "scripts": {
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/ersinfotech/ers-prom#readme",
   "dependencies": {
+    "consul": "^0.34.1",
     "on-finished": "^2.3.0",
     "prom-client": "^11.5.3"
   }
